done with making navbar sticky when scrolling

--- a/css/global.css
+++ b/css/global.css
@@ -130,8 +130,9 @@ html {
   
   }
   
-  .contact-button:hover {    
-    text-shadow: -6px 3px 2px rgba(0, 0, 0, 0.2);
+  .contact-button:hover {  
+    transform:perspective(300px) rotate(1deg);
+    text-shadow: -6px 3px 2px rgba(63, 51, 51, 0.2);
     box-shadow: -2px 0 0 5px rgba(0, 0, 0, 0.2);
   cursor: pointer;
   }
