--- a/css/main.css
+++ b/css/main.css
@@ -101,6 +101,8 @@
   position: absolute;
   top: 0px;
   z-index:100;
+  border-bottom: 1px solid;
+  border-color:rgb(179, 175, 175);
  
 }
 .sub-menu li {
@@ -266,7 +268,7 @@ color:white;
   content: '';
   position: absolute;
   background-image: linear-gradient(
-32deg, rgb(14, 13, 13), rgba(95, 91, 91, 0));
+    32deg, rgb(14, 13, 13), rgba(95, 91, 91, 0));
   height: 100%;
   width: 100%;
   top: 0px;
