--- a/css/global.css
+++ b/css/global.css
@@ -14,7 +14,7 @@ html {
     font-size: 16px;
     font-weight: 300;
     color: black;
-    line-height: inherit;
+    
     display: block;
     padding: 0px;
     margin: 0px;
@@ -46,41 +46,19 @@ html {
     margin: 0;
   }
   
-  h1 {
-    font-size: 45px;
-  }
-  
-  h2 {
-    font-size: 40px;
-  }
-  
-  h3 {
-    font-size: 30px;
-  }
-  
-  h4 {
-    font-size: 24px;
-  }
-  
-  h5 {
-    font-size: 14px;
-  }
-  
+
   p {
     margin-bottom: 18px;
     font-size: 15px;
-    line-height: 2;
+    line-height: 1.3;
     font-family: "Roboto", sans-serif;
     display: block;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    
+   
   }
   
   p:last-of-type {
     margin-bottom: 0;
+    text-align:left;
   }
   
   ul {
